@@ -1,3 +1,4 @@
 <footer>
-<span class="copyright-text"><?=$f_copyrights?></span>
+    <span class="copyright-text"><?= $f_copyrights ?></span>
+    <a href="https://metzys.net" class="logo-metzys"></a>
 </footer>
