@@ -28,3 +28,5 @@
 31/05/23 -> minor fixes project page
 01/06/23 -> HTML/CSS => updated resume, added blocks (skills web, skills data..)
 01/06/23 -> PHP => added translations variables for the new resume
+01/06/23 -> HTML/CSS => added my logo in footer
+01/06/23 -> cleaned CSS file (alphabetical order inside classes + removed some comments)
